Attempting to fix button display bug on Safari for Book a Visit link. In progress

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,12 @@ hr {
     border-top: 1px solid rgba(179, 18, 48, 0.74);
 }
 
+/*input {
+-webkit-appearance: none;
+-moz-appearance: none;
+appearance: none;
+}*/
+
 /*-------------------------------------------------------- Colours */
 
 .red {
